--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
-language: java
-before_script:
-  - echo "Starting build"
+addons:
+  sonarcloud:
+    organization: "125philos"
+    token:
+      secure: "a6738bc3c71dc377a50ab80294777047f999d7d5" # encrypted value of your token
+
 script:
-  - mvn clean package
-after_script:
-  - echo "Script finished"
-after_success:
-  - echo "Build was successful. $TRAVIS_TEST_RESULT"
-after_failure:
-  - echo "Build was failed"
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
