--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
+language: java
+
 addons:
   sonarcloud:
     organization: "125philos"
     token:
-      secure: "a6738bc3c71dc377a50ab80294777047f999d7d5" # encrypted value of your token
+      secure: "3dcc7de2d31f9b8089e33c63bdaf1032f82adffd" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
