--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/servers
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/servers
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.generate-ddl=true
+
+# Set here configurations for the database connection
+server.port = 8085
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/servers
+spring.datasource.username=postgres
+spring.datasource.password=12345
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
