--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@
 #spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 
-# Set here configurations for the database connection
 server.port = 8085
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/servers
-spring.datasource.username=postgres
-spring.datasource.password=12345
+# Set here configurations for the database connection
+FullURL=jdbc:postgresql://localhost:5432/servers;
+Postgres_DB_User=postgres;
+Postgres_DB_Password=12345
+spring.datasource.url=${FullURL}
+spring.datasource.username=${Postgres_DB_User}
+spring.datasource.password=${Postgres_DB_Password}
 spring.jpa.hibernate.ddl-auto=update
