--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/servers
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
