--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.4.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -143,6 +149,5 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-
 
 </project>
